@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
class BluetoothManager {
  .. defined in cpp ..
  # BluetoothManager(QObject *parent) : QObject(parent)
  # findActivePlayer()
  # connectToService(const QString &serviceName)
  # handleDBusSignal(const QDBusMessage &msg)
  # updateMetadata()
  # updatePlaybackStatus()
  # updatePosition()
  # parseMetadataMap(const QVariantMap &metadata)
  # togglePlay()
  # next()
  # previous()
}
class CameraPage {
  .. defined in cpp ..
  # CameraPage(QWidget *parent)
    : QWidget(parent)
    , ui(new Ui::CameraPage)
  # startStream()
  # stopStream()
  # processPendingDatagrams()
}
class Clavier {
  .. defined in cpp ..
  # Clavier(QWidget *parent) : QDialog(parent), majusculeActive(true), isSymbolMode(false)
  # handleButton()
  # deleteChar()
  # validateText()
  # toggleShift()
  # updateKeys()
  # addSpace()
  # addUnderscore()
  # switchKeyboard()
  # switchLayout()
  # updateKeyboardLayout()
  # startLongPress()
  # stopLongPress()
  # handleLongPress()
  # showAccentPopup(QPushButton* btn)
  # insertAccent()
  # startDeleteDelay()
  # startDelete()
  # stopDelete()
  # loadUsageHistory()
  # ...
}
class GpsTelemetrySource {
  .. defined in cpp ..
  # GpsTelemetrySource(TelemetryData* data, QObject* parent)
    : QObject(parent), m_data(data)
  # start(const QString& portName)
  # stop()
  # onPositionUpdated(const QGeoPositionInfo &info)
}
class HAPage {
  .. defined in cpp ..
  # HAPage(QWebEngineProfile* profile, QObject* parent) : QWebEnginePage(profile, parent)
  # javaScriptConsoleMessage(JavaScriptConsoleMessageLevel level, const QString &message, int lineNumber, const QString &sourceID)
}
class HomeAssistant {
  .. defined in cpp ..
  # HomeAssistant(QWidget* parent) : QWidget(parent)
  # openKeyboard()
}
class MainWindow {
  .. defined in cpp ..
  # MainWindow(TelemetryData* telemetry, QWidget* parent)
    : QMainWindow(parent), ui(new Ui::MainWindow), m_t(telemetry)
  # widgetToString(QWidget* w)
  # stringToWidget(const QString& name)
  # saveSplitState()
  # displayPages(QWidget* p1, QWidget* p2)
  # toggleSplitAndHome()
  # goSplit()
  # goNav()
  # goMedia()
  # goCam()
  # goSettings()
  # goHomeAssistant()
  # updateTopBarAndAlert()
}
class MediaPage {
  .. defined in cpp ..
  # MediaPage(QWidget *parent) : QWidget(parent), ui(new Ui::MediaPage)
  # setCompactMode(bool compact)
}
class Mpu9250Source {
  .. defined in cpp ..
  # Mpu9250Source(TelemetryData* data, QObject* parent)
    : QObject(parent), m_data(data), m_fileDescriptor(-1)
  # start()
  # readSensor()
  # madgwickUpdate(float ax, float ay, float az, float gx, float gy, float gz, float mx, float my, float mz, float dt)
  # stop()
}
class NavigationPage {
  .. defined in cpp ..
  # NavigationPage(QWidget* parent)
    : QWidget(parent), ui(new Ui::NavigationPage)
  # eventFilter(QObject *obj, QEvent *event)
  # openVirtualKeyboard()
  # onSuggestionsReceived(const QString& jsonSuggestions)
  # onRouteInfoReceived(const QString& distance, const QString& duration)
  # bindTelemetry(TelemetryData* t)
  # requestRouteForText(const QString& destination)
  # onSuggestionChosen(const QString& suggestion)
  # triggerSuggestionsSearch()
}
class SettingsPage {
  .. defined in cpp ..
  # SettingsPage(QWidget* parent)
    : QWidget(parent), ui(new Ui::SettingsPage)
  # showAutoClosingMessage(const QString &title, const QString &text, int timeoutMs)
  # refreshPairedList()
  # onVisibleClicked()
  # setDiscoverable(bool enable)
  # stopDiscovery()
  # onForgetClicked()
  # errorOccurred(QBluetoothLocalDevice::Error error)
}
class TelemetryData {
  .. defined in cpp ..
  # TelemetryData(QObject* parent) : QObject(parent)
  # setSpeedKmh(double v)
  # setGpsOk(bool v)
  # setLat(double v)
  # setLon(double v)
  # setHeading(double v)
  # setAlertText(const QString& v)
  # setAlertLevel(int v)
}
class QObject <<external>>
QObject <|-- BluetoothManager
class QWidget <<external>>
QWidget <|-- CameraPage
class QDialog <<external>>
QDialog <|-- Clavier
class QObject <<external>>
QObject <|-- GpsTelemetrySource
class QWebEnginePage <<external>>
QWebEnginePage <|-- HAPage
class QWidget <<external>>
QWidget <|-- HomeAssistant
class QMainWindow <<external>>
QMainWindow <|-- MainWindow
class QWidget <<external>>
QWidget <|-- MediaPage
class QObject <<external>>
QObject <|-- Mpu9250Source
class QWidget <<external>>
QWidget <|-- NavigationPage
class QWidget <<external>>
QWidget <|-- SettingsPage
class QObject <<external>>
QObject <|-- TelemetryData
@enduml